apps/argocd/appset-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-applicationset-controller
