apps/argocd/webhook-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-appset-webhook
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
  hostnames:
    - argocd-webhook.froystein.jp
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/webhook
      backendRefs:
        - name: argocd-applicationset-controller
          port: 7000
